log.txt
[build] win7bridge.dll
  [FAIL] E:\ЬьвэдЦХЬЭЌВНХЬ\18059126980\ЗЖЫМдД\ГЬађбЇЯА\CompetLayer\src\loader\dllmain.c
E:\ЬьвэдЦХЬЭЌВНХЬ\18059126980\ЗЖЫМдД\ГЬађбЇЯА\CompetLayer\src\loader\dllmain.c:114:16: error: redefinition of 'struct _BCRYPT_AUTHENTICATED_CIPHER_MODE_INFO'
 typedef struct _BCRYPT_AUTHENTICATED_CIPHER_MODE_INFO {
                ^
In file included from E:/ЬьвэдЦХЬЭЌВНХЬ/18059126980/ЗЖЫМдД/ГЬађбЇЯА/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include/wincrypt.h:12:0,
                 from E:/ЬьвэдЦХЬЭЌВНХЬ/18059126980/ЗЖЫМдД/ГЬађбЇЯА/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include/windows.h:95,
                 from E:\ЬьвэдЦХЬЭЌВНХЬ\18059126980\ЗЖЫМдД\ГЬађбЇЯА\CompetLayer\src\loader\dllmain.c:52:
E:/ЬьвэдЦХЬЭЌВНХЬ/18059126980/ЗЖЫМдД/ГЬађбЇЯА/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include/bcrypt.h:172:18: note: originally defined here
   typedef struct _BCRYPT_AUTHENTICATED_CIPHER_MODE_INFO {
                  ^
E:\ЬьвэдЦХЬЭЌВНХЬ\18059126980\ЗЖЫМдД\ГЬађбЇЯА\CompetLayer\src\loader\dllmain.c:128:3: error: conflicting types for 'BCRYPT_AUTHENTICATED_CIPHER_MODE_INFO'
 } BCRYPT_AUTHENTICATED_CIPHER_MODE_INFO;
   ^
In file included from E:/ЬьвэдЦХЬЭЌВНХЬ/18059126980/ЗЖЫМдД/ГЬађбЇЯА/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include/wincrypt.h:12:0,
                 from E:/ЬьвэдЦХЬЭЌВНХЬ/18059126980/ЗЖЫМдД/ГЬађбЇЯА/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include/windows.h:95,
                 from E:\ЬьвэдЦХЬЭЌВНХЬ\18059126980\ЗЖЫМдД\ГЬађбЇЯА\CompetLayer\src\loader\dllmain.c:52:
E:/ЬьвэдЦХЬЭЌВНХЬ/18059126980/ЗЖЫМдД/ГЬађбЇЯА/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include/bcrypt.h:186:5: note: previous declaration of 'BCRYPT_AUTHENTICATED_CIPHER_MODE_INFO' was here
   } BCRYPT_AUTHENTICATED_CIPHER_MODE_INFO,*PBCRYPT_AUTHENTICATED_CIPHER_MODE_INFO;
     ^
  [FAIL] link win7bridge.dll
E:\ЬьвэдЦХЬЭЌВНХЬ\18059126980\ЗЖЫМдД\ГЬађбЇЯА\CompetLayer\scripts\win7_verify\bin\sim_dpi.o:sim_dpi.c:(.text+0x5): undefined reference to `SetProcessDPIAware'
E:\ЬьвэдЦХЬЭЌВНХЬ\18059126980\ЗЖЫМдД\ГЬађбЇЯА\CompetLayer\scripts\win7_verify\bin\sim_dpi.o:sim_dpi.c:(.text+0x25): undefined reference to `SetProcessDPIAware'
collect2.exe: error: ld returned 1 exit status
[build] win7bridge_loader.exe
  [OK]   win7bridge_loader.exe
[build] pe_patch.exe
  [OK]   pe_patch.exe
[build] test_3_1_4_anti_debug.exe
  [OK] 
[build] test_3_2_2_high_subsystem.exe
  [OK] 
[build] case_01_high_subsystem.exe
  [OK]   case_01_high_subsystem
[build] case_02_apiset_import.exe
  [OK]   case_02_apiset_import
[build] case_03_get_proc_address.exe
  [OK]   case_03_get_proc_address
[build] case_04_version_spoof.exe
  [OK]   case_04_version_spoof
[build] case_05_pseudo_console.exe
  [OK]   case_05_pseudo_console
[build] case_06_wait_on_address.exe
  [OK]   case_06_wait_on_address
[build] case_07_bcrypt_chacha20.exe
  [OK]   case_07_bcrypt_chacha20
[build] case_08_ucrt_check.exe
  [OK]   case_08_ucrt_check

============================================================
build_all done. failed=0
============================================================
